Fixes menu and black flickering

--- a/public/scss/boilerplate.scss
+++ b/public/scss/boilerplate.scss
@@ -43,6 +43,8 @@ html {
   overflow-y: scroll;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
 }
 
 body {
@@ -51,6 +53,8 @@ body {
   line-height: 1.231;
   font-family: sans-serif;
   color: #222;
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
 }
 
 button, input, select, textarea {
